<resources>
    <string name="app_null"></string>
    <string name="app_name">云听音乐</string>
    <string name="app_named">云听音乐</string>
    <string name="app_version">Version 2.2.5 Beta</string>

    <string name="button_beok">确定</string>
    <string name="button_cancel">取消</string>
    <string name="button_submit">提交</string>
    <string name="button_getupdate">升级</string>
    <string name="button_submitting">提交中</string>

    <string name="action_updatlog">更新日志</string>
    <string name="action_cheknews">检查更新</string>
    <string name="action_deveices">开发进度</string>
    <string name="action_sponsors">赞助我们</string>
    <string name="action_openreas">开源许可</string>
    <string name="action_settings">软件设置</string>
    <string name="action_exitapps">退出软件</string>
    <string name="action_privacys">隐私政策</string>
    <string name="navigation_title">你好朋友</string>
    <string name="navigation_items1">主要选项</string>
    <string name="navigation_items2">其它选项</string>
    <string name="navigation_items1_1">关于云听</string>
    <string name="navigation_items1_2">官方公告</string>
    <string name="navigation_items1_3">软件设置</string>
    <string name="navigation_items2_1">开发进度</string>
    <string name="navigation_items2_2">开源许可</string>
    <string name="navigation_items2_3">检查更新</string>
    <string name="navigation_items2_4">退出软件</string>
    <string name="error_notinternet">请检查您的网络连接</string>
    <string name="splashactivity_privacys_title">隐私政策</string>
    <string name="navigation_signin">点击领取您的今日份惊喜</string>
    <string name="splashactivity_privacys_button">同意该隐私政策</string>
    <string name="navigation_subtitle">生命在于折腾，生命不息，折腾不止</string>

    <string name="bottom_card_1">首页</string>
    <string name="bottom_card_2">搜索</string>
    <string name="bottom_card_3">资源</string>
    <string name="bottom_card_4">我的</string>

    <string name="about_item_0">更新日志</string>
    <string name="about_item_1">订阅更新</string>
    <string name="about_item_2">开发者说</string>
    <string name="about_item_3">快捷跳转</string>
    <string name="about_item_4">隐私设置</string>
    <string name="about_item_5">检查更新</string>

    <string name="about_quick_0">加入我们</string>
    <string name="about_quick_1">官方网站</string>
    <string name="about_quick_2">作者博客</string>
    <string name="about_quick_3">赞助我们</string>
    <string name="about_quick_4">开发进度</string>
    <string name="about_quick_5">运营数据</string>

    <string name="aaa_aaa">你的邮箱</string>
    <string name="aaa_ttt">云听音乐 Beta</string>
    <string name="aaa_ddd">订阅更新提交成功！</string>
    <string name="aaa_ccc">正在提交中，请稍后...</string>
    <string name="aaa_eee">订阅邮箱有效性检验失败！</string>
    <string name="aaa_fff">订阅邮箱已经被提交过了！</string>
    <string name="aaa_bbb">Cloudlisten For Android</string>

    <string name="developer_nosay">开发者暂时还不想说什么！！</string>
    <string name="www_ttt">官网正在升级维护中，期待与你的下一次相遇！</string>
    <string name="subscription_updates">请输入您的邮箱以便我们将更新邮件推送到您的邮箱里</string>

    <string name="Privacy_Policy">
        本应用非常重视用户隐私政策并严格遵守相关的法律规定。请您仔细阅读《隐私政策》后再继续使用。如果您继续使用我们的服务，表示您已经充分阅读和理解我们协议的全部内容。\n
        本APP尊重并保护所有使用服务用户的个人隐私权。为了给您提供更准确、更优质的服务，本应用会按照本隐私权政策的规定使用和披露您的个人信息。除本隐私权政策另有规定外，在未征得您事先许可的情况下，本应用不会将这些信息对外披露或向第三方提供。本应用会不时更新本隐私权政策。 您在同意本应用服务使用协议之时，即视为您已经同意本隐私权政策全部内容。\n
        1. 适用范围\n
        (a) 在您注册本应用APP帐号时，您根据APP要求提供的个人注册信息；\n
        (b) 在您使用本应用网络服务，或访问本应用平台网页时，本应用自动接收并记录的您的浏览器和计算机上的信息，包括但不限于您的IP地址、浏览器的类型、使用的语言、访问日期和时间、软硬件特征信息及您需求的网页记录等数据；\n
        (c) 本应用通过合法途径从商业伙伴处取得的用户个人数据。\n
        (d)本应用严禁用户发布不良信息，如裸露、色情和亵渎内容，发布的内容我们会进行审核，一经发现不良信息，会禁用该用户的所有权限，予以封号处理。\n
        2. 信息使用\n
        (a)本应用不会向任何无关第三方提供、出售、出租、分享或交易您的个人登录信息。如果我们存储发生维修或升级，我们会事先发出推送消息来通知您，请您提前允许本应用消息通知。\n
        (b) 本应用亦不允许任何第三方以任何手段收集、编辑、出售或者无偿传播您的个人信息。任何本应用平台用户如从事上述活动，一经发现，本应用有权立即终止与该用户的服务协议。\n
        (c) 为服务用户的目的，本应用可能通过使用您的个人信息，向您提供您感兴趣的信息，包括但不限于向您发出产品和服务信息，或者与本应用合作伙伴共享信息以便他们向您发送有关其产品和服务的信息（后者需要您的事先同意）。\n
        3. 信息披露\n
        在如下情况下，本应用将依据您的个人意愿或法律的规定全部或部分的披露您的个人信息：\n
        (a) 未经您事先同意，我们不会向第三方披露；\n
        (b)为提供您所要求的产品和服务，而必须和第三方分享您的个人信息；\n
        (c) 根据法律的有关规定，或者行政或司法机构的要求，向第三方或者行政、司法机构披露；\n
        (d) 如您出现违反中国有关法律、法规或者本应用服务协议或相关规则的情况，需要向第三方披露；\n
        (e) 如您是适格的知识产权投诉人并已提起投诉，应被投诉人要求，向被投诉人披露，以便双方处理可能的权利纠纷；\n
        4. 信息存储和交换\n
        本应用收集的有关您的信息和资料将保存在本应用及（或）其关联公司的服务器上，这些信息和资料可能传送至您所在国家、地区或本应用收集信息和资料所在地的境外并在境外被访问、存储和展示。\n
        4.6 如因用户违反本协议中的任何条款，微特网络有权依据本协议终止对违约用户钜学帐号提供服务。\n
        5. Cookie的使用\n
        (a) 在您未拒绝接受cookies的情况下，本应用会在您的计算机上设定或取用cookies ，以便您能登录或使用依赖于cookies的本应用平台服务或功能。本应用使用cookies可为您提供更加周到的个性化服务，包括推广服务。\n
        (b) 您有权选择接受或拒绝接受cookies。您可以通过修改浏览器设置的方式拒绝接受cookies。但如果您选择拒绝接受cookies，则您可能无法登录或使用依赖于cookies的本应用网络服务或功能。\n
        (c) 通过本应用所设cookies所取得的有关信息，将适用本政策。\n
        6. 本隐私政策的更改\n
        (a)如果决定更改隐私政策，我们会在本政策中、本公司网站中以及我们认为适当的位置发布这些更改，以便您了解我们如何收集、使用您的个人信息，哪些人可以访问这些信息，以及在什么情况下我们会透露这些信息。\n
        (b)本公司保留随时修改本政策的权利，因此请经常查看。如对本政策作出重大更改，本公司会通过网站通知的形式告知。\n
        方披露自己的个人信息，如联络方式或者邮政地址。请您妥善保护自己的个人信息，仅在必要的情形下向他人提供。如您发现自己的个人信息泄密，尤其是本应用用户名及密码发生泄露，请您立即联络本应用客服，以便本应用采取相应措施。\n
        感谢您花时间了解我们的隐私政策！我们将尽全力保护您的个人信息和合法权益，再次感谢您的信任！\n\n\n\n\n\n\n\n
    </string>

    <string name="loginin_success">恭喜您今日签到成功</string>
    <string name="loginin_already">您今天已经领取过了哦！</string>
    <string name="loginin_success_text_2">天，再接再厉，为您赠上一言：\n\n</string>
    <string name="loginin_success_text_1">恭喜您今日签到成功，您已累计在这里签到了</string>

    <string name="connect_failed">服务器连接失败！</string>
    <string name="connect_exception">服务器连接异常！</string>
    <string name="server_failed">与服务器之间通信失败！</string>

    <string name="device_abnormal">警告：设备状态异常</string>
    <string name="permissions_warning">警告：请授权权限</string>
    <string name="need_permissions">提示：运行需要获取权限</string>
    <string name="permissions_changed">安卓13权限发生变更</string>
    <string name="need_permissions_text">云听音乐运行需要获取一定的设备权限，单击确定以获取权限！</string>
    <string name="device_abnormal_text">检测到当前设备异常或当前设备安卓版本过低，请更换设备后重试！</string>
    <string name="permissions_warning_text">你必须授权软件所需的权限，否则软件是无法正常使用的！！！</string>
    <string name="permissions_changed_text">请前往设置->应用->权限管理->打开对应权限，否则无法正常使用！</string>
    <string name="permissions_changed_message">因安卓13的文件管理权限发生变更，点击确定将自动跳转到系统设置，请授权"管理所有文件"的权限！</string>

    <string name="i_am_aware">朕已知晓</string>
    <string name="openbrowser">浏览器打开</string>
    <string name="jumpwwwsite">跳转至官网</string>
    <string name="app_notice">云听音乐APP公告</string>
    <string name="ask_about_exit">是否退出云听音乐</string>
    <string name="reqtips_failed">APP网络请求失败！</string>
    <string name="stay_tunned">正在开发中，敬请期待！</string>
    <string name="tips_lastversion">当前已是最新版本！</string>
    <string name="jumpbrowser">即将打开并跳转至浏览器！</string>
    <string name="reqtips_exception">APP网络请求异常！</string>
    <string name="action_exitted">再按一次返回键退出程序</string>
    <string name="app_have_update">检测到有新版本可以更新</string>
    <string name="appstatus_error">APP状态异常，即将退出！</string>
    <string name="start_to_checkupdates">正在开始检查更新！</string>
    <string name="app_notice_error">获取APP公告时遇到错误！</string>
    <string name="error_developer_say">获取开发者说时遇到错误！</string>
    <string name="java_asdeveloper">该功能正在开发中，敬请期待！</string>
    <string name="about_bottom_text">《云听音乐隐私政策保护指引》</string>
    <string name="open_in_browser_to_download">即将打开外部浏览器以下载！</string>

    <string name="app_updatelogs">
        云听音乐2.2.5-Beta版本更新日志：\n
        1.软件内弹窗UI迎来全新升级。\n
        2.软件内设置界面迎来全新升级。\n
        3.新增诸多反馈以及跳转的渠道。\n
        4.本次将清空您的所有数据。\n
        5.软件设置页面新增了一些彩蛋。
    </string>

</resources>