<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"

    tools:context=".SplashActivity"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_05">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_launcher"/>

        <TextView
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_marginTop="20dp"
            android:text="@string/aaa_ttt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/standard_bottom_sheet"
        style="@style/Widget.Material3.BottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:id="@+id/drag_handle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:textColor="@color/color4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/splashactivity_privacys_title"/>

        <LinearLayout
            android:id="@+id/privacytext"
            android:orientation="vertical"
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:fadeScrollbars="true"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="ifContentScrolls">

                <TextView
                    android:textSize="14sp"
                    android:textColor="#999999"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Privacy_Policy"/>

            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal">

            <Button
                android:textSize="18sp"
                android:id="@+id/agree_policy"
                android:layout_marginBottom="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color4"
                android:layout_gravity="center_horizontal"
                android:text="@string/splashactivity_privacys_button"/>

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:indeterminate="true"
            android:layout_width="250dp"
            android:layout_marginTop="650dp"
            android:layout_height="wrap_content">
        </com.google.android.material.progressindicator.LinearProgressIndicator>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>